--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
     "env": "^0.0.2",
     "mongoose": "^8.6.2",
     "reflect-metadata": "^0.2.0",
+    "request": "^2.88.2",
     "rxjs": "^7.8.1",
     "uuid": "^10.0.0"
   },
